@@ -235,6 +235,7 @@ typedef long long unsigned int ILuint64;
 #define IL_DICOM		0x044A  //!< Digital Imaging and Communications in Medicine (DICOM) - .dcm and .dicom extensions
 #define IL_IWI			0x044B  //!< Call of Duty Infinity Ward Image - .iwi extension
 #define IL_BLP			0x044C  //!< Blizzard Texture Format - .blp extension
+#define IL_FTX			0x044D  //!< Heavy Metal: FAKK2 Texture - .ftx extension
 
 
 #define IL_JASC_PAL     0x0475  //!< PaintShop Pro Palette
